# lifelogger

./: Cargo.toml  index.html
design/: home.html  home_with_edit.html
prototype/: package-lock.json  package.json
prototype/src/: Home.stories.jsx  index.js
src/: context.rs  main.rs  models.rs  prelude.rs  router.rs
src/components/: container.rs  display.rs  editor.rs  entrypoint.rs  home.rs  mod.rs  todo_editor.rs
src/models/: id.rs  mod.rs
static/: bootstrap.min.css
