[package]
name = "lifelogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
yew = "0.19"
yew-router = "0.16"
im = { version = "15.1.0", features = ["serde"] }
thiserror = "1.0.31"
web-sys = { version = "0.3.57", features = ["Storage"] }
uuid = { version = "1.1.0", features = ["v4", "fast-rng", "js"] }
derive_builder = "0.11.2"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
serde_json = "1.0.81"
serde = "1.0.137"
